modificare nr pozitii la angajare